--- a/MEGA_PROJECT/build.gradle
+++ b/MEGA_PROJECT/build.gradle
@@ -25,6 +25,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.projectlombok:lombok:1.18.28'
+	annotationProcessor 'org.projectlombok:lombok:1.18.28'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
 }
 
 tasks.named('test') {
