--- a/MEGA_PROJECT/src/main/resources/application.properties
+++ b/MEGA_PROJECT/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 spring.application.name=MEGA_PROJECT
 server.servlet.encoding.force=true
-spring.datasource.url=jdbc:mariadb://jinin000223.cafe24.com:3306/jinin000223
-spring.datasource.username=jinin000223
-spring.datasource.password=qw12!34er
+spring.datasource.url=jdbc:mariadb://localhost:3306/megaproject1
+spring.datasource.username=root
+spring.datasource.password=1111
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 server.port=8080
 
-
+spring.webflux.cors.allowCredentials=true
+spring.webflux.cors.allowedOrigins=http://localhost:3000
+spring.webflux.cors.allowedMethods=GET,POST,PUT,DELETE
 spring.mustache.prefix=classpath:/templates/
 spring.mustache.suffix=.mustache
 spring.mustache.cache=false
