--- a/MEGA_PROJECT/src/main/resources/application.properties
+++ b/MEGA_PROJECT/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=MEGA_PROJECT
 server.servlet.encoding.force=true
-spring.datasource.url=jdbc:mariadb://localhost:3306/megaproject1
-spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.url=jdbc:mariadb://jinin000223.mycafe24.com:3306/jinin000223
+spring.datasource.username=jinin000223
+spring.datasource.password=qw12!34er
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
