--- a/MEGA_PROJECT/src/main/frontend/package.json
+++ b/MEGA_PROJECT/src/main/frontend/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "lucide-react": "^0.474.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
