--- a/MEGA_PROJECT/src/main/resources/application.properties
+++ b/MEGA_PROJECT/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.webflux.cors.allowedMethods=GET,POST,PUT,DELETE
 spring.mustache.prefix=classpath:/templates/
 spring.mustache.suffix=.mustache
 spring.mustache.cache=false
+management.endpoints.web.exposure.include=*
+
 
