--- a/MEGA_PROJECT/build.gradle
+++ b/MEGA_PROJECT/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.projectlombok:lombok:1.18.28'
 	annotationProcessor 'org.projectlombok:lombok:1.18.28'
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
