--- a/MEGA_PROJECT/src/main/frontend/package.json
+++ b/MEGA_PROJECT/src/main/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.0",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
