--- a/MEGA_PROJECT/build.gradle
+++ b/MEGA_PROJECT/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.28'
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.session:spring-session-data-redis'
 }
 
 tasks.named('test') {
