--- a/MEGA_PROJECT/src/main/resources/application.properties
+++ b/MEGA_PROJECT/src/main/resources/application.properties
@@ -9,12 +9,22 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 server.port=8080
 
-spring.webflux.cors.allowCredentials=true
-spring.webflux.cors.allowedOrigins=http://localhost:3000
-spring.webflux.cors.allowedMethods=GET,POST,PUT,DELETE
-spring.mustache.prefix=classpath:/templates/
-spring.mustache.suffix=.mustache
-spring.mustache.cache=false
+# Redis ?? ??
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# ??? Redis? ????? ??
+spring.session.store-type=redis
+spring.session.redis.flush-mode=on_save
+spring.session.redis.namespace=spring:session
+
+# ?? ???? ?? (30?)
+server.servlet.session.timeout=30m
+server.servlet.session.tracking-modes=cookie
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.same-site=lax
+
 management.endpoints.web.exposure.include=*
 
 
