--- a/MEGA_PROJECT/package.json
+++ b/MEGA_PROJECT/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
-    "react-bootstrap": "^2.10.8"
+    "react-bootstrap": "^2.10.8",
+    "vite": "^6.1.0"
   }
 }
