--- a/MEGA_PROJECT/src/main/resources/application.properties
+++ b/MEGA_PROJECT/src/main/resources/application.properties
@@ -28,3 +28,4 @@ server.servlet.session.cookie.same-site=lax
 management.endpoints.web.exposure.include=*
 
 
+spring.web.resources.static-locations=file:./user_upload/
