모든 링크 .env이용, api로 통합한 버전

--- a/MEGA_PROJECT/build.gradle
+++ b/MEGA_PROJECT/build.gradle
@@ -7,6 +7,9 @@ plugins {
 group = 'com.jyh000223'
 version = '0.0.1-SNAPSHOT'
 
+tasks.named("test") {
+	enabled = false
+}
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(18)
