--- a/MEGA_PROJECT/src/main/frontend/package.json
+++ b/MEGA_PROJECT/src/main/frontend/package.json
@@ -14,8 +14,12 @@
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3"
+    "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^7.1.3",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
