--- a/MEGA_PROJECT/src/main/frontend/package.json
+++ b/MEGA_PROJECT/src/main/frontend/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
+    "install": "^0.13.0",
     "lucide-react": "^0.474.0",
+    "npm": "^10.9.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
